--- a/project.properties
+++ b/project.properties
@@ -1,6 +1,6 @@
 #locations
 project.extPath = extension/
-context_path = WEB-INF/railo/
+context_path = WEB-INF/lucee/
 version = 0.3.2
 server.name = localhost
 server.port = 8080
