--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,17 @@
-#project
-build/*.zip
-extension/output/*.*
-extension/lib/
-extension/config.xml
-lucee/
-unames.xml
-output/
-bin/
-
-#extensions
-*.project
 *.class
+*.classpath
+*.classpath
 *.DS_Store
-*.classpath
-/.settings
-*.classpath
-*.project
 *.iml
+*.project
+*.project
 /.idea
+/.settings
+/bin/
+/build/*.zip
+/extension/config.xml
+/extension/lib/
+/extension/output/*.*
+/lucee/
+/output/
+/WEB-INF/
